--- a/index.html
+++ b/index.html
@@ -143,9 +143,13 @@
     </h1>
  <br>
       <br>
-    <a href ="2.html">Segment 2</a>
+    <a href ="2.html">p5.js segment</a>
       <br>
-      <a href ="3.html">Statement </a>
+      <a href ="3.html"> planned statement </a>
+      <p>
+        For my final project, I will be revisiting the theme of orbiting planets from my project three. In my final project, I will include new, more detailed three dimensional
+        orbitals, and also add a orbiting schematic made in p5.js. I will be adding more interactivity to this project and exploring its themes more.
+      </p>
     </div>
   </body>
 </html>
