--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   <body>
    <div class="center">
     <h1>
-      Statement
+      Project Three
     </h1>
      <br>
     </div>
     <div class ="statementp">
       <p>
-For my project 
+For my final project, I will be revisiting the theme of oribtals from my project three. My final project will consist of more orbitals made in three.js and p5.js, 
+        utilizing the skills that I have learned through out the semester. The orbitals will be more detailed than before, have more interactivity, and the website 
+        will have more artistic cohesiveness. This will be the main page where the main orbital will be.
       </p>
       <br>
-      <p>
-        Each of the two segments demonstrate two fractal polygons with rotating satellites around them. One of them is a wireframe and the other is solid.
-      </p>
+
     </div>
   </body>
 </html>
