--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
    <div class="center">
     <h1>
-      Project Three
+      Final project Prep 2
     </h1>
      <br>
     </div>
@@ -20,7 +20,8 @@ For my final project, I will be revisiting the theme of oribtals from my project
         will have more artistic cohesiveness. This will be the main page where the main orbital will be.
       </p>
       <br>
-
+    <a href ="2.html">p5.js segment</a>
+      <br>
     </div>
   </body>
 </html>
