--- a/2.html
+++ b/2.html
@@ -15,7 +15,8 @@
     </div>
     <div class ="statementp">
       <p>
-In the p5.js segment, the assets will be made with pixel art and animated through p5.js. In p5.js, I plan to add clickability and further interactivity for the viewer.
+This page is where the p5.js segment will be hosted. In the p5.js segment, the assets will be made with pixel art and animated through p5.js. 
+        In p5.js, I plan to add clickability and further interactivity for the viewer.
       </p>
       <br>
     <a href ="index.html">main page</a>
