--- a/2.html
+++ b/2.html
@@ -16,7 +16,8 @@
     <div class ="statementp">
       <p>
 This page is where the p5.js segment will be hosted. In the p5.js segment, the assets will be made with pixel art and animated through p5.js. 
-        In p5.js, I plan to add clickability and further interactivity for the viewer.
+        In p5.js, I plan to add clickability and further interactivity for the viewer. The viewer will be able to click on various orbitals
+        and it will take them to other pages within the webiste.
       </p>
       <br>
     <a href ="index.html">main page</a>
